
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "airbender-fuzzer"
version = "0.0.1"
description="Fuzzer for the ZKsync Airbender zkVM"
requires-python = ">= 3.10"
authors = []
readme = "README.md"
dependencies = [
  "circil",
  "zkvm-fuzzer-utils"
]

[project.scripts]
airbender-fuzzer = "airbender_fuzzer.cli:app"

[tool.setuptools.packages.find]
include = ["airbender_fuzzer*"]
exclude = []
